Group startup items, and use Future's